# ai-skills

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: includes.md  local-overrides.md  progressive-disclosure.md  provider-comparison.md  scoping.md  sdk.md  security.md  troubleshooting.md
docs/integrations/: README.md  anthropic.md  chatgpt.md  claude_desktop.md  gemini.md  ollama.md  other-llms.md
docs/testing/: multi-llm.md
examples/: README.md  async_usage.py  multi_provider.py
examples/notebooks/: anthropic_claude.ipynb  gemini_colab.ipynb  ollama_local.ipynb  openai_quickstart.ipynb
examples/skills/ab-test-setup/: SKILL.md
examples/skills/agent-development/: SKILL.md
examples/skills/aiskills-guide/: SKILL.md
examples/skills/analytics-tracking/: SKILL.md
examples/skills/api-design/: SKILL.md
examples/skills/architecture-patterns/: SKILL.md
examples/skills/async-concurrency/: SKILL.md
examples/skills/authentication-patterns/: SKILL.md
examples/skills/aws-fundamentals/: SKILL.md
examples/skills/caching-strategies/: SKILL.md
examples/skills/ci-cd-pipelines/: SKILL.md
examples/skills/code-review/: SKILL.md
examples/skills/competitor-alternatives/: SKILL.md
examples/skills/copy-editing/: SKILL.md
examples/skills/copywriting/: SKILL.md
examples/skills/cost-optimization/: SKILL.md
examples/skills/data-modeling/: SKILL.md
plugin/: README.md  SKILLS.md  aiskills-wrapper.sh  plugin.json
plugin/commands/: skill-search.md  skill.md  skills.md
scripts/: setup-claude.sh  setup-plugin.sh  setup.sh  update_skills_spec.py
src/aiskills/: __init__.py  cli.py  config.py  constants.py
tests/: __init__.py  conftest.py
tests/api/: test_server.py
tests/core/: test_loader.py  test_manager.py  test_parser.py  test_renderer.py  test_router.py
tests/integration/: test_multi_llm.py
tests/integrations/: test_integrations.py
tests/models/: __init__.py  test_dependency.py  test_skill.py  test_variable.py
tests/sources/: __init__.py
tests/storage/: test_paths.py
(+143 files in other folders)
